# fintechforge

./: .gitignore  README.md  pyproject.toml
docs/: data-modeling-challenges.md  instrument_reference_data_prompt.md  order_management_systems.md  timezone-challenges.md  timezone-considerations.md  trading_instrument_identifier_table.md  trading_instrument_reference_data.md
examples/python/: data_modeling_example.py  place_order.py  timezone_example.py
src/fintechforge/data_models/: __init__.py  instrument.py  order.py  trade.py
src/fintechforge/trading_ops/: lifecycle.py
tests/: test_data_models.py  test_lifecycle.py  test_timezone_example.py
