[tool.poetry]
name = "fintechforge"
version = "0.1.0"
description = "Teaching project for trading operations and fintech engineering"
authors = ["FintechForge Maintainers"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "fintechforge", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.11.7"
pandas = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.9"
ipykernel = "^6.30.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
